@@ -1094,12 +1094,12 @@ class ProductFournisseur extends Product
 	 *  @param	int		$maxlength					Maxlength of ref
 	 *  @param  int     $save_lastsearch_value    	-1=Auto, 0=No save of lastsearch_values when clicking, 1=Save lastsearch_values whenclicking
 	 *  @param	int		$notooltip					No tooltip
+	 *  @param  string  $morecss            		''=Add more css on link
 	 *  @param	int		$add_label					0=Default, 1=Add label into string, >1=Add first chars into string
 	 *  @param	string	$sep						' - '=Separator between ref and label if option 'add_label' is set
-	 *  @param  string  $morecss            		''=Add more css on link
 	 *	@return	string								String with URL
 	 */
-	public function getNomUrl($withpicto = 0, $option = '', $maxlength = 0, $save_lastsearch_value = -1, $notooltip = 0, $add_label = 0, $sep = ' - ', $morecss = '')
+	public function getNomUrl($withpicto = 0, $option = '', $maxlength = 0, $save_lastsearch_value = -1, $notooltip = 0, $morecss = '', $add_label = 0, $sep = ' - ')
 	{
 		global $db, $conf, $langs, $hookmanager;
 
